fix spacing on login

--- a/app/assets/stylesheets/api/sign_in.scss
+++ b/app/assets/stylesheets/api/sign_in.scss
@@ -32,6 +32,8 @@ input.login-input {
  align-items: center;
  text-align: left;
  border: 2px solid black;
+ width: 250px;
+ padding: 2px;
 }
 
 .login-input::placeholder {
